force-app/main/default/objects/FEC_MDM_Decision_Rule__c/FEC_MDM_Decision_Rule__c.object-meta.xml
<CustomObject>
    <description>MDM Decision Rule - stores stage transition routing rules (replaces FEC_MDM_Stage_Change__c)</description>
    <label>FEC MDM Decision Rule</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FEC MDM Decision Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>