force-app/main/default/objects/FEC_MDM_Decision_Rule__c/fields/FEC_Available_Decisions__c.field-meta.xml
<CustomField>
    <fullName>FEC_Available_Decisions__c</fullName>
    <label>Available Decisions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>