force-app/main/default/objects/FEC_MDM_Decision_Rule__c/fields/FEC_Custom_Actions__c.field-meta.xml
<CustomField>
    <fullName>FEC_Custom_Actions__c</fullName>
    <description>JSON storage for dynamic action columns. Format: {&quot;colName1&quot;:&quot;value1&quot;,&quot;colName2&quot;:&quot;value2&quot;}</description>
    <label>Custom Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>