force-app/main/default/objects/FEC_MDM_Decision_Rule__c/fields/FEC_Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Previous_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Stage</label>
    <referenceTo>FEC_MDM_Case_Stage__c</referenceTo>
    <relationshipLabel>Decision Rules (Previous Stage)</relationshipLabel>
    <relationshipName>Previous_Stage_Decision_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>