force-app/main/default/objects/FEC_MDM_Decision_Rule__c/fields/FEC_Team_User_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_Team_User_Group__c</fullName>
    <label>Team/User Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>